--- a/product_module/templates/product_module/product_detail.html
+++ b/product_module/templates/product_module/product_detail.html
@@ -1,10 +1,19 @@
 {% extends 'shared/_layout.html' %}
 {% load render_partial %}
-{% load poll_extras%}
+{% load poll_extras %}
 {% block title %}
     {{ product.title }}
 {% endblock %}
 
+{% block header_references %}
+    <link href="/static/lib/image-lightbox/css/lightbox.min.css" rel="stylesheet">
+{% endblock %}
+
+
+{% block footer_references %}
+    <script src="/static/lib/image-lightbox/js/lightbox.min.js"></script>
+    {#    <script src="/static/lib/image-lightbox/js/lightbox-plus-jquery.min.js"></script>#}
+{% endblock %}
 {% block content %}
     <section>
         <div class="container">
@@ -15,11 +24,15 @@
                         <div class="col-sm-5">
                             <div class="view-product">
                                 {% if product.image %}
-                                    <img src="{{ product.image.url }}" alt="">
+                                    <img src="{{ product.image.url }}" alt="" id="main_image">
                                 {% else %}
-                                    <img src="/static/images/product-details/1.jpg" alt="">
+                                    <img src="/static/images/product-details/1.jpg" alt="" id="main_image">
                                 {% endif %}
-                                <h3>بزرگنمایـی</h3>
+                                <h3>
+                                    <a id="show_large_image_modal" href="{{ product.image.url }}" data-lightbox="product-image">
+                                        بزرگنمایـی
+                                    </a>
+                                </h3>
                             </div>
                             <div id="similar-product" class="carousel slide" data-ride="carousel">
 
@@ -28,7 +41,7 @@
                                     {% for group in product_galleries_group %}
                                         <div class="item {% if forloop.first %} active {% endif %}">
                                             {% for gallery in group %}
-                                                <a href="">
+                                                <a onclick="showLargeImage('{{ gallery.image.url }}')">
                                                     <img src="{{ gallery.image.url }}" width="75" height="75" alt="">
                                                 </a>
                                             {% endfor %}
