--- a/templates/shared/_layout.html
+++ b/templates/shared/_layout.html
@@ -9,11 +9,13 @@
     <meta name="author" content="">
     <title>{% block title %}{% endblock %}</title>
     {% include 'shared/header_references.html' %}
+    {% block header_references %}{% endblock %}
 </head><!--/head-->
 <body>
 {% render_partial 'home_module.views.site_header_component' %}
 {% block content %}{% endblock %}
 {% render_partial 'home_module.views.site_footer_component' %}
 {% include 'shared/footer_references.html' %}
+{% block footer_references %}{% endblock %}
 </body>
 </html>
