--- a/product_module/templates/product_module/product_detail.html
+++ b/product_module/templates/product_module/product_detail.html
@@ -29,7 +29,8 @@
                                     <img src="/static/images/product-details/1.jpg" alt="" id="main_image">
                                 {% endif %}
                                 <h3>
-                                    <a id="show_large_image_modal" href="{{ product.image.url }}" data-lightbox="product-image">
+                                    <a id="show_large_image_modal" href="{{ product.image.url }}"
+                                       data-lightbox="product-image">
                                         بزرگنمایـی
                                     </a>
                                 </h3>
@@ -99,7 +100,7 @@
                         <div class="col-sm-12">
                             <ul class="nav nav-tabs">
                                 <li class="active"><a href="#details" data-toggle="tab">جزئیات</a></li>
-                                <li><a href="#reviews" data-toggle="tab">نظرات (5)</a></li>
+                                {#                                <li><a href="#reviews" data-toggle="tab">نظرات (5)</a></li>#}
                             </ul>
                         </div>
                         <div class="tab-content">
@@ -146,107 +147,30 @@
                     </div><!--/category-tab-->
 
                     <div class="recommended_items"><!--recommended_items-->
-                        <h2 class="title text-center">محصولات پیشنهادی</h2>
+                        <h2 class="title text-center">محصولات مرتبط</h2>
 
                         <div id="recommended-item-carousel" class="carousel slide" data-ride="carousel">
                             <div class="carousel-inner">
-                                <div class="item">
-                                    <div class="col-sm-4">
-                                        <div class="product-image-wrapper">
-                                            <div class="single-products">
-                                                <div class="productinfo text-center">
-                                                    <img src="/static/images/product-details/1.jpg" alt="">
-                                                    <h2>1.250.000 ريال</h2>
-                                                    <p>توضیحات کوتاه محصول</p>
-                                                    <button type="button" class="btn btn-default add-to-cart"><i
-                                                            class="fa fa-shopping-cart"></i>افزودن به سبـد خریـد
-                                                    </button>
-                                                </div>
-                                            </div>
-                                        </div>
+                                {% for group in related_products %}
+                                    <div class="item {% if forloop.first %}active{% endif %}">
+                                        {% for product in group %}
+                                            {% include 'includes/product_item_partial.html' with product=product col_size=4 %}
+                                        {% endfor %}
+
                                     </div>
-                                    <div class="col-sm-4">
-                                        <div class="product-image-wrapper">
-                                            <div class="single-products">
-                                                <div class="productinfo text-center">
-                                                    <img src="/static/images/product-details/1.jpg" alt="">
-                                                    <h2>1.250.000 ريال</h2>
-                                                    <p>توضیحات کوتاه محصول</p>
-                                                    <button type="button" class="btn btn-default add-to-cart"><i
-                                                            class="fa fa-shopping-cart"></i>افزودن به سبـد خریـد
-                                                    </button>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-4">
-                                        <div class="product-image-wrapper">
-                                            <div class="single-products">
-                                                <div class="productinfo text-center">
-                                                    <img src="/static/images/product-details/1.jpg" alt="">
-                                                    <h2>1.250.000 ريال</h2>
-                                                    <p>توضیحات کوتاه محصول</p>
-                                                    <button type="button" class="btn btn-default add-to-cart"><i
-                                                            class="fa fa-shopping-cart"></i>افزودن به سبـد خریـد
-                                                    </button>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="item active">
-                                    <div class="col-sm-4">
-                                        <div class="product-image-wrapper">
-                                            <div class="single-products">
-                                                <div class="productinfo text-center">
-                                                    <img src="/static/images/product-details/1.jpg" alt="">
-                                                    <h2>1.250.000 ريال</h2>
-                                                    <p>توضیحات کوتاه محصول</p>
-                                                    <button type="button" class="btn btn-default add-to-cart"><i
-                                                            class="fa fa-shopping-cart"></i>افزودن به سبـد خریـد
-                                                    </button>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-4">
-                                        <div class="product-image-wrapper">
-                                            <div class="single-products">
-                                                <div class="productinfo text-center">
-                                                    <img src="/static/images/product-details/1.jpg" alt="">
-                                                    <h2>1.250.000 ريال</h2>
-                                                    <p>توضیحات کوتاه محصول</p>
-                                                    <button type="button" class="btn btn-default add-to-cart"><i
-                                                            class="fa fa-shopping-cart"></i>افزودن به سبـد خریـد
-                                                    </button>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-4">
-                                        <div class="product-image-wrapper">
-                                            <div class="single-products">
-                                                <div class="productinfo text-center">
-                                                    <img src="/static/images/product-details/1.jpg" alt="">
-                                                    <h2>1.250.000 ريال</h2>
-                                                    <p>توضیحات کوتاه محصول</p>
-                                                    <button type="button" class="btn btn-default add-to-cart"><i
-                                                            class="fa fa-shopping-cart"></i>افزودن به سبـد خریـد
-                                                    </button>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+                                {% endfor %}
+
                             </div>
-                            <a class="left recommended-item-control" href="#recommended-item-carousel"
-                               data-slide="prev">
-                                <i class="fa fa-angle-left"></i>
-                            </a>
-                            <a class="right recommended-item-control" href="#recommended-item-carousel"
-                               data-slide="next">
-                                <i class="fa fa-angle-right"></i>
-                            </a>
+                            {% if related_products|length > 1 %}
+                                <a class="left recommended-item-control" href="#recommended-item-carousel"
+                                   data-slide="prev">
+                                    <i class="fa fa-angle-left"></i>
+                                </a>
+                                <a class="right recommended-item-control" href="#recommended-item-carousel"
+                                   data-slide="next">
+                                    <i class="fa fa-angle-right"></i>
+                                </a>
+                            {% endif %}
                         </div>
                     </div><!--/recommended_items-->
 
