--- a/templates/shared/site_header_component.html
+++ b/templates/shared/site_header_component.html
@@ -47,8 +47,13 @@
                     <div class="shop-menu pull-right">
                         <ul class="nav navbar-nav">
                             {% if request.user.is_authenticated %}
-                                <li><a href="#"><i class="fa fa-user"></i> سبد خرید</a></li>
-                                <li><a href="{% url 'user_panel_dashboard' %}"><i class="fa fa-user"></i> پنل کاربری</a>
+                                {% if request.user.is_superuser %}
+                                    <li><a href="/admin"><i class="fa fa-user"></i>پنل ادمین</a></li>
+                                {% endif %}
+                                <li><a href="{% url 'User_basket_page' %}"><i class="fa fa-shopping-cart"></i> سبد خرید</a>
+                                </li>
+                                <li><a href="{% url 'user_panel_dashboard' %}"><i class="fa fa-user"></i> پنل کاربری
+                                </a>
                                 </li>
                                 <li><a href="{% url 'logout_page' %}"><i class="fa fa-sign-out"></i> خروج</a></li>
                             {% else %}
