--- a/user_panel_module/templates/user_panel_module/user_basket_content.html
+++ b/user_panel_module/templates/user_panel_module/user_basket_content.html
@@ -78,8 +78,8 @@
                             <li>مجمـوع سبـد خریـد <span>{{ sum|three_digits_currency }}</span></li>
                             <li>هزینـه حمل و نقـل <span>رایـگان</span></li>
                         </ul>
-                        <a class="btn btn-default check_out"
-                           href="{% url 'request_payment' %}">پرداخت</a>
+                        <a class="btn btn-default check_out" href="#">پرداخت</a>
+{#                                                {% url 'request_payment' %}#}
                     </div>
                 </div>
             </div>
